Adds new route & WeatherReport controller method for handling dual post requests. Adds lots of form styles.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,6 +50,7 @@ input[type="email"],
 input[type="password"],
 input[type="submit"],
 input[type="search"],
+input[type="file"],
 select, option
 textarea {
   -webkit-appearance: none;
