--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -5,6 +5,7 @@ body {
   font-family:'Fira Sans', Helvetica, sans-serif;
   padding-top:1px;
   background:linen;
+  line-height:135%;
 }
 
 a:hover {
@@ -121,8 +122,10 @@ header nav ul {
 header nav li.icon {
   display:block;
   float:left;
-  margin:10px;
-  margin-bottom:0px;
+  margin-left:10px;
+  margin-right:10px;
+  margin-top:5px;
+  margin-bottom:5px;
   width:25px;
   height:0px;
   padding-top:25px;
@@ -162,7 +165,7 @@ header .nav-bar-dropdown {
   z-index: 999;
   width:180px;
   padding:9px;
-  background:white;
+  background:#ccc;
   color:#333;
   border: 1px solid #ccc;
   border-radius:5px;
@@ -202,7 +205,7 @@ header .nav-bar-dropdown input[type="text"] {
   border-top:18px solid transparent;
   border-left:18px solid transparent;
   border-right:18px solid transparent;
-  border-bottom: 18px solid #fff;
+  border-bottom: 18px solid #ccc;
   z-index: 2;
   top:-28px;
   right:00px;
@@ -269,16 +272,23 @@ header .nav-bar-dropdown input[type="text"] {
 }
 
 h2.page-title{
-  font-size:24pt;
+  font-size:26pt;
   font-weight:bold;
-  margin-top:10px;
-  margin-bottom:10px;
+  margin-top:25px;
+  margin-bottom:15px;
 }
+
+span.page-subtitle {
+  font-size:16pt;
+  font-weight:normal;
+/*  margin-top:20px;
+  margin-bottom:5px;
+*/}
 
 h3.section-title {
   font-size:20pt;
   font-weight:bold;
-  margin-top:10px;
+  margin-top:20px;
   margin-bottom:5px;
 }
 
@@ -306,29 +316,51 @@ h3.section-title {
   background: rgba(0,0,0,0.5);
 }
 
-/*------------- JONATHAN'S FORM STYLES --------------*/
+/*------------- FORM STYLES --------------*/
 
 .input {
-  margin: 20px 0;
+  margin:0;
+/*  margin: 20px 0;*/
 }
 
-.input > label {
+.input label {
   display: inline-block;
   font-weight: bold;
   padding: 20px 0 5px 0;
 }
 
-.input > input, textarea, select {
+.input input, textarea, select {
   display:block;
   border: 2px solid #000;
   padding: 5px 10px;
-/*  width: 250px;*/
+  max-width: 200px;
+/*  width:auto;*/
   border-radius: 5px;
   background:#ffffff;
 }
 
-.input > input[type="radio"] {
+.input textarea {
+  line-height:inherit;
+  font:inherit;
+  width:auto;
+  height:6em;
+  resize:none;
+}
+
+.radio-group, .checkbox-group {
+  display:block;
+  position:relative;
+}
+
+.radio-group > input, .checkbox-group > input {
   display:inline-block;
+}
+
+.radio-group > label, .checkbox-group > label {
+  display:inline-block;
+  padding:0;
+  padding-right:10px;
+  font-weight:normal;
 }
 
 .input > input:focus {
@@ -338,6 +370,10 @@ h3.section-title {
 input.submit, button.submit {
   background: #ccc;
   color:black;
+}
+
+.content .submit, .content .submit, .modal .submit {
+  margin-top:10px;
 }
 
 input.submit:hover, button.submit:hover {
