Replaces tag checkboxes with textboxes. Adds method for making tags out of strings. Adds styles to Edit & Delete buttons.

--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -381,6 +381,10 @@ input.submit:hover, button.submit:hover {
   cursor:pointer;
 }
 
+input.submit.delete:hover, button.submit.delete:hover {
+  background: red;
+}
+
 .submit > input {
   position: relative;
   background: #a7ba5c;
