--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -292,6 +292,18 @@ h3.section-title {
   margin-bottom:5px;
 }
 
+/*------------- FOOTER -------------------------------*/
+footer {
+  display:block;
+  position:relative;
+  margin-left:auto;
+  margin-right:auto;
+  padding:20px;
+  width:911px;
+  margin-bottom:50px;
+  background:transparent;
+}
+
 /*------------- MODAL STYLES -------------------------*/
 
 .has-active-modal .modal {
