--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,6 +82,10 @@
 
   </div>
 
+  <footer>
+
+  </footer>
+
   <section class="modal">
     <section class="modal-box">
       <span class="modal-close-button">&times;</span>
@@ -99,8 +103,8 @@
 <%= "<p>errors: #{flash[:errors]} </p>".html_safe if flash[:errors] %>
 <%= "<p>notice: #{flash[:notice]} </p>".html_safe if flash[:notice] %>
 
-<%= render "layouts/navigation_bar_signed_in" if signed_in? %>
-<%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
+<%#= render "layouts/navigation_bar_signed_in" if signed_in? %>
+<%#= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
 
 <script>
 
