--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -12,7 +12,7 @@
 
     <div class="input">
 
-      <%= button_to "Edit Photo",
+      <%= link_to "Edit Photo",
         edit_photo_url(@photo),
         class: "submit" if @photo.submitter == current_user%>
       <br>
