Changes photos in full feed partial to use full-size images.

--- a/app/views/photos/_full_feed.html.erb
+++ b/app/views/photos/_full_feed.html.erb
@@ -5,7 +5,7 @@
   <li>
     <figure>
       <a href="<%= photo_url(photo) %>">
-        <%= image_tag photo.image.url(:small), class: "content-photo" %>
+        <%= image_tag photo.image.url(:big), class: "content-photo" %>
       </a>
 
       <figcaption>
