Adds picture previews to avatar and new photo forms using FileReader.

--- a/app/assets/stylesheets/users/details_form.css
+++ b/app/assets/stylesheets/users/details_form.css
@@ -5,3 +5,30 @@ h1.page-title {
 }
 
 /*------------ FORM IN CENTER COLUMN ---------------*/
+
+.avatars {
+  display:block;
+  position:relative;
+  width:100%;
+  margin-bottom:20px;
+}
+
+section.current-avatar {
+  display:block;
+  float:left;
+}
+
+section.new-avatar {
+  display:block;
+  float:left;
+  margin-left:20px;
+}
+
+.avatars img {
+  display:block;
+}
+
+img.new-avatar.empty {
+  background:#ccc;
+  content:"Preview your new avatar here.";
+}
