--- a/app/assets/stylesheets/weather_reports/new_with_photo.css
+++ b/app/assets/stylesheets/weather_reports/new_with_photo.css
@@ -51,6 +51,11 @@ form.combined .photo {
   border-left:1px solid #999;
 }
 
+img.preview {
+  max-width:200px;
+  max-height:200px;
+}
+
 /*------ SHARED SECTION -----------------*/
 
 form.combined .shared {
