--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,7 +92,8 @@
 
       <div id="modal-container">
         <%= render "weather_reports/new_with_photo",
-          weather_conditions: @weather_conditions %>
+          weather_conditions: @weather_conditions,
+          photo: @new_photo %>
       </div>
     </section>
   </section>
