--- a/app/assets/stylesheets/zip_codes/show.css
+++ b/app/assets/stylesheets/zip_codes/show.css
@@ -7,7 +7,7 @@ a.favorite {
 }
 
 a.favorite.false {
-  color:#eee;
+  color:#ddd;
 }
 
 a.favorite.true {
@@ -15,7 +15,7 @@ a.favorite.true {
 }
 
 a.favorite:hover {
-  text-shadow: 1px 1px 1px #ccc;
+  text-shadow: 0px 0px 1px #999;
 }
 
 
