Adds search_by_user_name to User model & adds user searching to zip_codes#search. Adds a new partial for rendering users on search results page.

--- a/app/views/galleries/_user_details.html.erb
+++ b/app/views/galleries/_user_details.html.erb
@@ -15,6 +15,6 @@
 </p>
 
 <p>
-  <%= insert_approriate_favorite_user_button(user.id) %>
+  <%= insert_approriate_favorite_user_button(user.id) if signed_in? %>
 </p>
 
