--- a/app/views/galleries/_user_details.html.erb
+++ b/app/views/galleries/_user_details.html.erb
@@ -16,7 +16,7 @@
           &#9733;
         </a>
   <p>
-    <%= link_to user.home_zip_code.city, zip_code_url(user.home_zip_code_id) if !!user.home_zip_code_id %>
+    <%= link_to "#{user.home_zip_code.city}, #{user.home_zip_code.state_code}", zip_code_url(user.home_zip_code_id) if !!user.home_zip_code_id %>
   </p>
 
   <p>
