--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 
 
 /* - - - - RESETS - - - - */
-html, body, p, ul, li, h1, h2, h3 {
+html, body, p, ul, li, h1, h2, h3, pre {
   margin:0;
   padding:0;
   border:none;
