--- a/app/assets/stylesheets/zip_codes/show.css
+++ b/app/assets/stylesheets/zip_codes/show.css
@@ -19,15 +19,35 @@ a.favorite:hover {
 }
 
 
-/*---------- Weather conditions percentages numbers & chart -------------*/
+/*------- Weather conditions percentages numbers & chart -----*/
 .percentages {
   display:block;
   position:relative;
   width:300px;
   height:200px;
+  margin-top:20px;
 }
 
 
 .hidden {
   display:none;
+}
+
+/*---------- latest reports table ---------------*/
+
+.recent-reports th {
+  font-weight: bold;
+  text-align: left;
+/*  background: #eee;*/
+  padding: 3px 12px;
+/*  border: 5px solid #ccc;*/
+}
+
+.recent-reports td {
+  padding: 3px 10px;
+/*  border-bottom: 1px solid #ccc;*/
+}
+
+.recent-reports td.temperature-value {
+  text-align:right;
 }
